--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: forem-rails:latest
     container_name: forem_rails
     ports:
-      - "3000:3000"
+#      - "3000:3000"
+      - "80:3000"
     depends_on:
       - bundle
       - db
@@ -122,7 +123,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data:delegated
+      - /Users/tuantmtb/Documents/project/beecost/sub_project/chiaseit/data/db_data:/var/lib/postgresql/data:delegated
 
   redis:
     image: "redis"
@@ -143,7 +144,7 @@ services:
       - xpack.graph.enabled=false
       - xpack.watcher.enabled=false
     volumes:
-      - es_data:/usr/share/elasticsearch/data:delegated
+      - /Users/tuantmtb/Documents/project/beecost/sub_project/chiaseit/data/es_data:/usr/share/elasticsearch/data:delegated
     ports:
       - "9200:9200"
     ulimits:
